Update project to jdk 17 and gradle 7